# kschoonme-protorepo

./: .gitignore  README.md  build.py  lerna.json  package.json  pyproject.toml
.github/workflows/: test_and_deploy.yml
notifications/: service.proto
protos/identity/: package.json  service.proto
protos/notifications/: package.json  service.proto
templates/rust/: Cargo.toml.j2  build.rs.j2  build_and_publish.sh
templates/rust/src/: lib.rs.j2
templates/typescript/: build_and_publish.sh  index.js  package.json.j2
templates/typescript/scripts/: build-protos.sh
