[tool.poetry]
name = "kschoonme-protorepo"
version = "1.0.0"
description = "Monorepo containing all *.kschoon.me protofiles."
authors = ["Kevin Schoonover <me@kschoon.me>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
semver = "^2.10.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
